--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # environment variables file
-.env
+.env*
 .env*.local
 variable.json
 
@@ -66,7 +66,6 @@ database*
 *.sql
 *.sqlite
 *.sqlite3
-*orders.json
 
 # Misc.
 *#
