--- a/.github/workflows/production-pipeline.yml
+++ b/.github/workflows/production-pipeline.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: artifact
-          path: .next
+          path: out
 
   deploy:
     needs: build
@@ -48,7 +48,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: artifact
-          path: .next
+          path: out
 
       - name: Add the environment variables
         run: |
