--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "start": "NODE_ENV=production node main.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "k-utilities": "^1.4.5"
+    "express": "^4.19.2"
   },
   "devDependencies": {
+    "chart.js": "^4.4.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "next": "^14.2.5",
@@ -22,8 +22,7 @@
     "postcss": "^8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.1",
-    "chart.js": "^4.4.4"
+    "tailwindcss": "^3.4.1"
   },
   "repository": {
     "type": "git",
