--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "NODE_ENV=production node main.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
     "chart.js": "^4.4.4",
