--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "k-utilities": "^1.4.9",
     "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
