--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "k-utilities": "^1.4.9",
-    "technicalindicators": "^3.1.0"
+    "technicalindicators": "^3.1.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "chart.js": "^4.4.4",
