Implemented live prices chart.

--- a/iac/nginx/default-server.conf
+++ b/iac/nginx/default-server.conf
@@ -1,4 +1,12 @@
 # File path: /etc/nginx/sites-available/default
+# For Connection Pooling: Eliminates TCP handshake overhead for each request and Can improve performance by 20-50% for high traffic sites
+upstream node_upstream {
+    server http://localhost:3000;
+    # For multiple backend servers
+    # server 192.168.1.100:3000; Add s
+    # server 192.168.1.101:3000;
+    keepalive 64; ## maintains up to 64 persistent connections to your Node.js server
+}
 
 server {
 	listen 80 ;
@@ -42,11 +50,22 @@ server {
 	index index.html index.htm index.nginx-debian.html;
 
 	location / {
-    proxy_pass http://localhost:3000;
+    proxy_pass http://node_upstream;
     proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # Important WebSocket-specific settings:
+    # proxy_set_header Upgrade $http_upgrade; ## for WebSocket connections
+    # proxy_set_header Connection 'upgrade'; ## for WebSocket connections
+    # proxy_cache_bypass $http_upgrade; ## for WebSocket connections
+
+    # Important (Server-Sent Events) SSE-specific settings:
+    proxy_set_header Connection ''; ## for HTTP/1.1 keep-alive or SSE connections
+    proxy_cache off;
+    chunked_transfer_encoding off;
+    proxy_read_timeout 1h;  # Adjust as needed
 	}
 }
