Loging real ip address.

--- a/iac/nginx/default-server.conf
+++ b/iac/nginx/default-server.conf
@@ -1,7 +1,7 @@
 # File path: /etc/nginx/sites-available/default
 # For Connection Pooling: Eliminates TCP handshake overhead for each request and Can improve performance by 20-50% for high traffic sites
 upstream node_upstream {
-    server http://localhost:3000;
+    server localhost:3000;
     # For multiple backend servers
     # server 192.168.1.100:3000; Add s
     # server 192.168.1.101:3000;
