--- a/iac/nginx/default-server.conf
+++ b/iac/nginx/default-server.conf
@@ -1,12 +1,12 @@
 # File path: /etc/nginx/sites-available/default
 # For Connection Pooling: Eliminates TCP handshake overhead for each request and Can improve performance by 20-50% for high traffic sites
-upstream node_upstream {
-    server localhost:3000;
-    # For multiple backend servers
-    # server 192.168.1.100:3000; Add s
-    # server 192.168.1.101:3000;
-    keepalive 64; ## maintains up to 64 persistent connections to your Node.js server
-}
+# upstream node_upstream {
+#     server localhost:3000;
+#     # For multiple backend servers
+#     # server 192.168.1.100:3000; Add s
+#     # server 192.168.1.101:3000;
+#     keepalive 64; ## maintains up to 64 persistent connections to your Node.js server
+# }
 
 server {
 	listen 80 ;
@@ -50,7 +50,8 @@ server {
 	index index.html index.htm index.nginx-debian.html;
 
 	location / {
-    proxy_pass http://node_upstream;
+    # proxy_pass http://node_upstream;
+    proxy_pass http://localhost:3000;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
