Made the price cleanup every hour.

--- a/iac/nginx/default-server.conf
+++ b/iac/nginx/default-server.conf
@@ -1,3 +1,4 @@
+
 # File path: /etc/nginx/sites-available/default
 # For Connection Pooling: Eliminates TCP handshake overhead for each request and Can improve performance by 20-50% for high traffic sites
 # upstream node_upstream {
@@ -65,8 +66,9 @@ server {
 
     # Important (Server-Sent Events) SSE-specific settings:
     proxy_set_header Connection ''; ## for HTTP/1.1 keep-alive or SSE connections
+    proxy_buffering off;
     proxy_cache off;
     chunked_transfer_encoding off;
-    proxy_read_timeout 1h;  # Adjust as needed
+    proxy_read_timeout 120s;  # Adjust as needed e.g. 1h
 	}
 }
