Improving sse connection.

--- a/iac/nginx/default-server.conf
+++ b/iac/nginx/default-server.conf
@@ -12,11 +12,11 @@
 server {
 	listen 80 ;
 	listen [::]:80;
-  server_name crypto.kawaraa.com;
+  server_name trader.kawaraa.com;
   
   # Note: Unccomment this only if SSL is enabled.
   # Reroute the connection to HTTPS server
-  if ($host = "crypto.kawaraa.com") {
+  if ($host = "trader.kawaraa.com") {
       return 301 https://$host$request_uri;
   }
   # Note: Unccomment this only if SSL is enabled. This is useful when testing the server via IP address
@@ -39,7 +39,7 @@ server {
 server {
   listen 443 ssl default_server;
   listen [::]:443 ssl;
-  server_name crypto.kawaraa.com;
+  server_name trader.kawaraa.com;
 
   # The followng configuration for cloudflare certificate
   ssl_certificate /etc/ssl/cloudflare/cloudflare.crt;
